plugins {
    id 'java'
    alias(libs.plugins.spring.boot)
    alias(libs.plugins.spring.dependency.management)
}

group = 'com.feike'
version = '0.1.0-SNAPSHOT'

repositories {
    maven { url = uri('https://maven.aliyun.com/repository/public/') }
    maven { url = uri('https://maven.aliyun.com/repository/spring/') }
    mavenCentral()
}

dependencies {
    implementation platform("org.springframework.ai:spring-ai-bom:${libs.versions.springAi.get()}")
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.ai:spring-ai-starter-mcp-server-webmvc'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.named('bootRun') {
    jvmArgs = [
            '-Dfile.encoding=UTF-8',
            '-Dconsole.encoding=UTF-8',
            '--enable-native-access=ALL-UNNAMED'
    ]
}
